--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Electronics and Communication Engineer, Information Technology Officer, Store Team Member, Proactive Team Member</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://drive.google.com/file/d/1v0x0nuyKRr5axUE_-S1nTXoeKxcU393x/view?usp=sharing" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1v0x0nuyKRr5axUE_-S1nTXoeKxcU393x&export=download" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/GToSTL3JtUE?si=Ojj4cw1typJwx-YX" data-bs-target="#videoModal">
                             <span></span>
