--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h1 class="display-3 mb-3">Roshan Ghimire</h1>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Electronics and Communication Engineer, Information Technology Officer, Store Team Member, Proactive Team Member</div>
+                    <div class="typed-text d-none">Electronics & Communication Engineer, Information Technology Officer, Store Team Member, Proactive Team Member</div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="https://drive.usercontent.google.com/u/0/uc?id=1v0x0nuyKRr5axUE_-S1nTXoeKxcU393x&export=download" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
