--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Roshan Ghimire </title>
+    <title>Roshan Ghimire</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -45,7 +45,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary fw-bold m-0">ProMan</h1>
+            <h1 class="text-primary fw-bold m-0">Roshan Ghimire</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,6 @@
     </nav>
     <!-- Navbar End -->
 
-
     <!-- Header Start -->
     <div class="container-fluid bg-light my-6 mt-0" id="home">
         <div class="container">
@@ -80,7 +79,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Electronics & Communication Engineer, Information Technology Officer, Store Team Member, Proactive Team Member</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1v0x0nuyKRr5axUE_-S1nTXoeKxcU393x&export=download" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1v0x0nuyKRr5axUE_-S1nTXoeKxcU393x&export=download" class="btn btn-primary py-3 px-4 me-5">Download Resume</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/GToSTL3JtUE?si=Ojj4cw1typJwx-YX" data-bs-target="#videoModal">
                             <span></span>
@@ -100,14 +99,13 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-0">
                 <div class="modal-header">
-                    <h3 class="modal-title" id="exampleModalLabel">Youtube Video</h3>
+                    <h4 class="modal-title" id="exampleModalLabel">Youtube Video</h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <!-- 16:9 aspect ratio -->
                     <div class="ratio ratio-16x9">
-                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                            allow="autoplay"></iframe>
+                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always" allow="autoplay"></iframe>
                     </div>
                 </div>
             </div>
