--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-0">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="exampleModalLabel">Youtube Video</h4>
+                    <h5 class="modal-title" id="exampleModalLabel">My Youtube Video</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -122,11 +122,11 @@
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
                             <h1 class="display-1 mb-0">8</h1>
-                            <h5 class="mb-0">Years</h5>
+                            <h5 class="mb-0">Years + </h5>
                         </div>
-                        <h3 class="lh-base mb-0">of working experience as a web designer & developer</h3>
+                        <h4 class="lh-base mb-0">of working experience as an Information Technology Officer</h4>
                     </div>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                    <p class="mb-4">As an IT Officer, I excel in providing comprehensive technical support for the establishment and operation of information technology systems within municipal offices. My expertise encompasses conducting tailored training sessions for IT staff and municipal employees to enhance their proficiency in IT systems and e-governance principles. I adeptly manage the setup and maintenance of software applications and digital tools, ensuring smooth daily operations and accurate record-keeping. With a keen focus on innovation, I spearhead the implementation of electronic governance measures and digital services, while also contributing to financial management and strategic planning through meticulous budgeting and annual IT planning. My proficiency extends to database management, resource digitization, and the establishment of information centres, all aimed at optimizing municipal resources and enhancing public access to services.</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Product</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Project Delivery</p>
