--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
                             <h1 class="display-1 mb-0">8</h1>
-                            <h5 class="mb-0">Years + </h5>
+                            <h5 class="mb-0">Years Plus </h5>
                         </div>
                         <h4 class="lh-base mb-0">of working experience as an Information Technology Officer</h4>
                     </div>
-                    <p class="mb-4">As an IT Officer, I excel in providing comprehensive technical support for the establishment and operation of information technology systems within municipal offices. My expertise encompasses conducting tailored training sessions for IT staff and municipal employees to enhance their proficiency in IT systems and e-governance principles. I adeptly manage the setup and maintenance of software applications and digital tools, ensuring smooth daily operations and accurate record-keeping. With a keen focus on innovation, I spearhead the implementation of electronic governance measures and digital services, while also contributing to financial management and strategic planning through meticulous budgeting and annual IT planning. My proficiency extends to database management, resource digitization, and the establishment of information centres, all aimed at optimizing municipal resources and enhancing public access to services.</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Product</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Project Delivery</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
+                    <p class="mb-4" aligh="justify"> As an IT Officer, I excel in providing comprehensive technical support for the establishment and operation of information technology systems within municipal offices. My expertise encompasses conducting tailored training sessions for IT staff and municipal employees to enhance their proficiency in IT systems and e-governance principles. I adeptly manage the setup and maintenance of software applications and digital tools, ensuring smooth daily operations and accurate record-keeping. With a keen focus on innovation, I spearhead the implementation of electronic governance measures and digital services, while also contributing to financial management and strategic planning through meticulous budgeting and annual IT planning. My proficiency extends to database management, resource digitization, and the establishment of information centres, all aimed at optimizing municipal resources and enhancing public access to services.</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Friendly</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Comprehensive Technical Support</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Delevery</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i> E-Governance Principles</p>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="#about">Read More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
@@ -143,7 +144,7 @@
                     </div>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Happy Clients</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">4321</h2>
                     </div>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
                     <div class="d-flex align-items-center mb-3">
@@ -163,9 +164,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="display-5 mb-5">Skills & Experience</h1>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum clita dolor duo clita sit.</p>
-                    <h3 class="mb-4">My Skills</h3>
+                    <h2 class="display-5 mb-5">Skills, Experience & Personal Attribute</h2>
+                    <p class="mb-4">To seek the challenging position where I can utilize my quantitative, analytical and learning capabilities to the optimum for the synergic development of the organization.</p>
+                    <h4 class="mb-4">My Skills</h4>
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="skill mb-4">
