--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">HTML/PHP/CSS/C-Programming and C++</h6>
+                                    <h6 class="font-weight-bold">HTML/PHP/C-Programming & C++</h6>
                                     <h6 class="font-weight-bold">40%</h6>
                                 </div>
                                 <div class="progress">
@@ -200,7 +200,7 @@
                         <div class="col-md-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Soldering of Electronics Components</h6>
+                                    <h6 class="font-weight-bold">Soldering Electronics Components</h6>
                                     <h6 class="font-weight-bold">80%</h6>
                                 </div>
                                 <div class="progress">
