--- a/index.html
+++ b/index.html
@@ -302,9 +302,12 @@
     <!-- Expertise End -->
 
 
-    <!-- Service Start -->
-    <div class="container-fluid bg-light my-5 py-6" id="service">
-                    <div class="tab-content">
+    <!-- Education Start -->
+        <div class="container-xxl py-6 pb-5" id="skill">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <h4 class="display-4 mb-4">My Skills, Experience and Personal Attribute</h4>
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
@@ -361,8 +364,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-    </div>
     <!-- Service End -->
 
 
