--- a/index.html
+++ b/index.html
@@ -310,10 +310,16 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>Bachelors</h5>
+                                    <h5>Master's Degree</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">.....</p>
+                                    <h6 class="mb-0">......</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>Bachelor's Degree</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2009 - 2013</p>
-                                    <h6 class="mb-0">Electronics and Communication Ebgineering</h6>
+                                    <h6 class="mb-0">Electronics and Communication Engineering</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>High School</h5>
