--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
     <!-- Expertise End -->
 
     <!-- Education Start -->
-        <div class="container-xxl py-6 pb-5" id="skill">
+    <div class="container-xxl py-6 pt-5" id="project">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6">
                     <h4 class="display-4 mb-4">My Education</h4>
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
@@ -336,6 +336,10 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+   
     <!-- Service End -->
 
 
