--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h1 class="text-primary fw-bold m-0">Roshan Ghimire</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
-                <a href="#project" class="nav-item nav-link">My Projects</a>
+                <a href="#project" class="nav-item nav-link">My Educations</a>
                 <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
                 <a href="#contact" class="nav-item nav-link">Contact Me</a>
             </div>
@@ -148,7 +148,7 @@
                     </div>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
                     <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
+                        <h5 class="border-end pe-3 me-3 mb-0">educations Completed</h5>
                         <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
                     </div>
                     <p class="mb-0">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
@@ -302,7 +302,7 @@
     <!-- Expertise End -->
 
     <!-- Education Start -->
-    <div class="container-xxl py-6 pt-5" id="project">
+    <div class="container-xxl py-6 pt-5" id="education">
         <div class="container">
             <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
@@ -341,7 +341,6 @@
         </div>
    
     <!-- Service End -->
-
 
     <!-- Projects Start -->
     <div class="container-xxl py-6 pt-5" id="project">
