--- a/index.html
+++ b/index.html
@@ -158,12 +158,46 @@
     </div>
     <!-- About End -->
 
-
-    <!-- Expertise Start -->
-    <div class="container-xxl py-6 pb-5" id="skill">
+<!-- Education Start -->
+    <div class="container-xxl py-6 pt-5" id="education">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6">
+                    <h4 class="display-4 mb-4">My Education</h4>
+                        <div id="tab-1" class="tab-pane fade show p-0 active">
+                            <div class="row gy-5 gx-4">
+                                <div class="col-sm-20">
+                                    <h5>Master's Degree</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">.....</p>
+                                    <h6 class="mb-0">......</h6>
+                                </div>
+                                <div class="col-sm-20">
+                                    <h5>Bachelor's Degree</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2009 - 2013</p>
+                                    <h6 class="mb-0">Electronics and Communication Engineering</h6>
+                                </div>
+                                <div class="col-sm-20">
+                                    <h5>High School</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2007-2009</p>
+                                    <h6 class="mb-0">Xavier International Higher Secondary School</h6>
+                                </div>
+                                <div class="col-sm-20">
+                                    <h5>School Level</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">Passout 2007</p>
+                                    <h6 class="mb-0">Ekta Boarding School</h6>
+                                </div>  
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   <!-- Education End -->
+
                     <h2 class="mb-4">My Skills, Experience and Personal Attribute</h2>
                     <p class="mb-4">To seek the challenging position where I can utilize my quantitative, analytical and learning capabilities to the optimum for the synergic development of the organization.</p>
                     <h4 class="mb-4">My Skills</h4>
@@ -301,46 +335,6 @@
     </div>
     <!-- Expertise End -->
 
-    <!-- Education Start -->
-    <div class="container-xxl py-6 pt-5" id="education">
-        <div class="container">
-            <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
-                <div class="col-lg-6">
-                    <h4 class="display-4 mb-4">My Education</h4>
-                        <div id="tab-1" class="tab-pane fade show p-0 active">
-                            <div class="row gy-5 gx-4">
-                                <div class="col-sm-20">
-                                    <h5>Master's Degree</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">.....</p>
-                                    <h6 class="mb-0">......</h6>
-                                </div>
-                                <div class="col-sm-20">
-                                    <h5>Bachelor's Degree</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2009 - 2013</p>
-                                    <h6 class="mb-0">Electronics and Communication Engineering</h6>
-                                </div>
-                                <div class="col-sm-20">
-                                    <h5>High School</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2007-2009</p>
-                                    <h6 class="mb-0">Xavier International Higher Secondary School</h6>
-                                </div>
-                                <div class="col-sm-20">
-                                    <h5>School Level</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">Passout 2007</p>
-                                    <h6 class="mb-0">Ekta Boarding School</h6>
-                                </div>  
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-   
-    <!-- Service End -->
 
     <!-- Projects Start -->
     <div class="container-xxl py-6 pt-5" id="project">
