--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h1 class="text-primary fw-bold m-0">Roshan Ghimire</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
-                <a href="#project" class="nav-item nav-link">My Educations</a>
+                <a href="#project" class="nav-item nav-link">My Projects</a>
                 <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
                 <a href="#contact" class="nav-item nav-link">Contact Me</a>
             </div>
@@ -148,7 +148,7 @@
                     </div>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
                     <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">educations Completed</h5>
+                        <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
                         <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
                     </div>
                     <p class="mb-0">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
@@ -158,47 +158,13 @@
     </div>
     <!-- About End -->
 
-<!-- Education Start -->
-    <div class="container-xxl py-6 pt-5" id="education">
-        <div class="container">
-            <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
-                <div class="col-lg-6">
-                    <h4 class="display-4 mb-4">My Education</h4>
-                        <div id="tab-1" class="tab-pane fade show p-0 active">
-                            <div class="row gy-5 gx-4">
-                                <div class="col-sm-20">
-                                    <h5>Master's Degree</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">.....</p>
-                                    <h6 class="mb-0">......</h6>
-                                </div>
-                                <div class="col-sm-20">
-                                    <h5>Bachelor's Degree</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2009 - 2013</p>
-                                    <h6 class="mb-0">Electronics and Communication Engineering</h6>
-                                </div>
-                                <div class="col-sm-20">
-                                    <h5>High School</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2007-2009</p>
-                                    <h6 class="mb-0">Xavier International Higher Secondary School</h6>
-                                </div>
-                                <div class="col-sm-20">
-                                    <h5>School Level</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">Passout 2007</p>
-                                    <h6 class="mb-0">Ekta Boarding School</h6>
-                                </div>  
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-   <!-- Education End -->
 
-                    <h2 class="mb-4">My Skills, Experience and Personal Attribute</h2>
+    <!-- Expertise Start -->
+    <div class="container-xxl py-6 pb-5" id="skill">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <h4 class="display-4 mb-4">My Skills, Experience and Personal Attribute</h4>
                     <p class="mb-4">To seek the challenging position where I can utilize my quantitative, analytical and learning capabilities to the optimum for the synergic development of the organization.</p>
                     <h4 class="mb-4">My Skills</h4>
                     <div class="row align-items-center">
@@ -334,6 +300,70 @@
         </div>
     </div>
     <!-- Expertise End -->
+
+
+    <!-- Service Start -->
+    <div class="container-fluid bg-light my-5 py-6" id="service">
+                    <div class="tab-content">
+                        <div id="tab-1" class="tab-pane fade show p-0 active">
+                            <div class="row gy-5 gx-4">
+                                <div class="col-sm-6">
+                                    <h5>UI Designer</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>Product Designer</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>Web Designer</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>Apps Designer</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="tab-2" class="tab-pane fade show p-0">
+                            <div class="row gy-5 gx-4">
+                                <div class="col-sm-6">
+                                    <h5>UI Design Course</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Cambridge University</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>IOS Development</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Cambridge University</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>Web Design</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Cambridge University</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>Apps Design</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <h6 class="mb-0">Cambridge University</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+    </div>
+    <!-- Service End -->
 
 
     <!-- Projects Start -->
